Update from https://github.com/babsballetschool/website/commit/aaa4f131e2af4d046084ee6bacf9dc0339b16907

--- a/resources/css/balletboetiek.css
+++ b/resources/css/balletboetiek.css
@@ -3,7 +3,7 @@
     --background-color: #FFF2FF;
     --font-color: #990000;
     --font-family: Georgia, Times New Roman, Times, serif;
-    --font-style: italic;
+    --font-style: normal;
     --font-size: 130%;
     --header-h1-size: 300%;
     --header-h2-size: 200%;
